--- a/AOAI-query-your-docs.ipynb
+++ b/AOAI-query-your-docs.ipynb
@@ -26,8 +26,8 @@
    "source": [
     "openai.api_type = 'azure'\n",
     "openai.api_version = '2023-05-15'\n",
-    "os.environ[\"OPENAI_API_KEY\"] = '225ecf1a48ed49cab726774bdc6b675a'\n",
-    "os.environ[\"OPENAI_API_BASE\"] = 'https://ozguler.openai.azure.com/' \n",
+    "os.environ[\"OPENAI_API_KEY\"] = 'XXX'\n",
+    "os.environ[\"OPENAI_API_BASE\"] = 'XXX' \n",
     "openai_api_key = os.environ.get('OPENAI_API_KEY')\n",
     "openai_api_base = os.environ.get('OPENAI_API_BASE')"
    ]
