--- a/AOAI-Langchain agency.ipynb
+++ b/AOAI-Langchain agency.ipynb
@@ -20,8 +20,8 @@
     "openai.api_type=\"azure\"\n",
     "openai.api_version=\"2023-05-15\"\n",
     "\n",
-    "OPENAI_API_BASE = \"XXX\"\n",
-    "OPENAI_API_KEY = \"XXX\"\n",
+    "OPENAI_API_BASE = \"https://ozguler2.openai.azure.com/\"\n",
+    "OPENAI_API_KEY = \"861723dd52da4a25a465f288a06a6135\"\n",
     "\n",
     "openai.api_base = OPENAI_API_BASE\n",
     "openai.api_key = OPENAI_API_KEY"
