--- a/AOAI-query-your-docs.ipynb
+++ b/AOAI-query-your-docs.ipynb
@@ -55,7 +55,8 @@
     }
    ],
    "source": [
-    "!pip show langchain"
+    "!pip show langchain\n",
+    "!pip upgrade langchain"
    ]
   },
   {
@@ -72,7 +73,7 @@
     }
    ],
    "source": [
-    "doc_reader = PdfReader('./Seneca-OntheShortnessofLife.pdf')\n",
+    "doc_reader = PdfReader('{Document Path}}')\n",
     "\n",
     "# read data from the file and put them into a variable called raw_text\n",
     "raw_text = ''\n",
@@ -239,9 +240,9 @@
     "import os\n",
     "import openai\n",
     "openai.api_type = \"azure\"\n",
-    "openai.api_base = \"https://ozguler2.openai.azure.com/\"\n",
+    "openai.api_base = \"XXX\"\n",
     "openai.api_version = \"2023-05-15\"\n",
-    "os.environ[\"OPENAI_API_KEY\"] = '861723dd52da4a25a465f288a06a6135'\n",
+    "os.environ[\"OPENAI_API_KEY\"] = 'XXX'\n",
     "openai.api_key = os.getenv(\"OPENAI_API_KEY\")"
    ]
   },
