--- a/notebooks/AOAI-Langchain-CognitiveServices-toolkit.ipynb
+++ b/notebooks/AOAI-Langchain-CognitiveServices-toolkit.ipynb
@@ -2,18 +2,154 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[33mWARNING: Skipping /opt/homebrew/lib/python3.11/site-packages/protobuf-4.23.2-py3.11.egg-info due to invalid metadata entry 'name'\u001b[0m\u001b[33m\n",
+      "\u001b[0m\u001b[33mWARNING: Skipping /opt/homebrew/lib/python3.11/site-packages/protobuf-4.22.5-py3.11.egg-info due to invalid metadata entry 'name'\u001b[0m\u001b[33m\n",
+      "\u001b[0m\u001b[33mWARNING: Skipping /opt/homebrew/lib/python3.11/site-packages/protobuf-4.23.3-py3.11.egg-info due to invalid metadata entry 'name'\u001b[0m\u001b[33m\n",
+      "\u001b[0m\u001b[33mWARNING: Skipping /opt/homebrew/lib/python3.11/site-packages/protobuf-4.23.2-py3.11.egg-info due to invalid metadata entry 'name'\u001b[0m\u001b[33m\n",
+      "\u001b[0m\u001b[33mWARNING: Skipping /opt/homebrew/lib/python3.11/site-packages/protobuf-4.22.5-py3.11.egg-info due to invalid metadata entry 'name'\u001b[0m\u001b[33m\n",
+      "\u001b[0m\u001b[33mWARNING: Skipping /opt/homebrew/lib/python3.11/site-packages/protobuf-4.23.3-py3.11.egg-info due to invalid metadata entry 'name'\u001b[0m\u001b[33m\n",
+      "\u001b[0mRequirement already satisfied: azure-ai-formrecognizer in /opt/homebrew/lib/python3.11/site-packages (3.2.1)\n",
+      "Requirement already satisfied: azure-core<2.0.0,>=1.23.0 in /opt/homebrew/lib/python3.11/site-packages (from azure-ai-formrecognizer) (1.26.3)\n",
+      "Requirement already satisfied: msrest>=0.6.21 in /opt/homebrew/lib/python3.11/site-packages (from azure-ai-formrecognizer) (0.7.1)\n",
+      "Requirement already satisfied: azure-common~=1.1 in /opt/homebrew/lib/python3.11/site-packages (from azure-ai-formrecognizer) (1.1.28)\n",
+      "Requirement already satisfied: typing-extensions>=4.0.1 in /opt/homebrew/lib/python3.11/site-packages (from azure-ai-formrecognizer) (4.6.3)\n",
+      "Requirement already satisfied: requests>=2.18.4 in /opt/homebrew/lib/python3.11/site-packages (from azure-core<2.0.0,>=1.23.0->azure-ai-formrecognizer) (2.28.2)\n",
+      "Requirement already satisfied: six>=1.11.0 in /opt/homebrew/lib/python3.11/site-packages (from azure-core<2.0.0,>=1.23.0->azure-ai-formrecognizer) (1.16.0)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /opt/homebrew/lib/python3.11/site-packages (from msrest>=0.6.21->azure-ai-formrecognizer) (2022.12.7)\n",
+      "Requirement already satisfied: isodate>=0.6.0 in /opt/homebrew/lib/python3.11/site-packages (from msrest>=0.6.21->azure-ai-formrecognizer) (0.6.1)\n",
+      "Requirement already satisfied: requests-oauthlib>=0.5.0 in /opt/homebrew/lib/python3.11/site-packages (from msrest>=0.6.21->azure-ai-formrecognizer) (1.3.1)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in /opt/homebrew/lib/python3.11/site-packages (from requests>=2.18.4->azure-core<2.0.0,>=1.23.0->azure-ai-formrecognizer) (3.0.1)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /Users/ozgurguler/Library/Python/3.11/lib/python/site-packages (from requests>=2.18.4->azure-core<2.0.0,>=1.23.0->azure-ai-formrecognizer) (3.4)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /opt/homebrew/lib/python3.11/site-packages (from requests>=2.18.4->azure-core<2.0.0,>=1.23.0->azure-ai-formrecognizer) (1.26.14)\n",
+      "Requirement already satisfied: oauthlib>=3.0.0 in /opt/homebrew/lib/python3.11/site-packages (from requests-oauthlib>=0.5.0->msrest>=0.6.21->azure-ai-formrecognizer) (3.2.2)\n",
+      "\u001b[33mWARNING: Skipping /opt/homebrew/lib/python3.11/site-packages/protobuf-4.23.2-py3.11.egg-info due to invalid metadata entry 'name'\u001b[0m\u001b[33m\n",
+      "\u001b[0m\u001b[33mWARNING: Skipping /opt/homebrew/lib/python3.11/site-packages/protobuf-4.22.5-py3.11.egg-info due to invalid metadata entry 'name'\u001b[0m\u001b[33m\n",
+      "\u001b[0m\u001b[33mWARNING: Skipping /opt/homebrew/lib/python3.11/site-packages/protobuf-4.23.3-py3.11.egg-info due to invalid metadata entry 'name'\u001b[0m\u001b[33m\n",
+      "\u001b[0m\u001b[33mWARNING: Skipping /opt/homebrew/lib/python3.11/site-packages/protobuf-4.23.2-py3.11.egg-info due to invalid metadata entry 'name'\u001b[0m\u001b[33m\n",
+      "\u001b[0m\u001b[33mWARNING: Skipping /opt/homebrew/lib/python3.11/site-packages/protobuf-4.22.5-py3.11.egg-info due to invalid metadata entry 'name'\u001b[0m\u001b[33m\n",
+      "\u001b[0m\u001b[33mWARNING: Skipping /opt/homebrew/lib/python3.11/site-packages/protobuf-4.23.3-py3.11.egg-info due to invalid metadata entry 'name'\u001b[0m\u001b[33m\n",
+      "\u001b[0m\u001b[33mWARNING: Skipping /opt/homebrew/lib/python3.11/site-packages/protobuf-4.23.2-py3.11.egg-info due to invalid metadata entry 'name'\u001b[0m\u001b[33m\n",
+      "\u001b[0m\u001b[33mWARNING: Skipping /opt/homebrew/lib/python3.11/site-packages/protobuf-4.22.5-py3.11.egg-info due to invalid metadata entry 'name'\u001b[0m\u001b[33m\n",
+      "\u001b[0m\u001b[33mWARNING: Skipping /opt/homebrew/lib/python3.11/site-packages/protobuf-4.23.3-py3.11.egg-info due to invalid metadata entry 'name'\u001b[0m\u001b[33m\n",
+      "\u001b[0m\u001b[33mWARNING: Skipping /opt/homebrew/lib/python3.11/site-packages/protobuf-4.23.2-py3.11.egg-info due to invalid metadata entry 'name'\u001b[0m\u001b[33m\n",
+      "\u001b[0m\u001b[33mWARNING: Skipping /opt/homebrew/lib/python3.11/site-packages/protobuf-4.22.5-py3.11.egg-info due to invalid metadata entry 'name'\u001b[0m\u001b[33m\n",
+      "\u001b[0m\u001b[33mWARNING: Skipping /opt/homebrew/lib/python3.11/site-packages/protobuf-4.23.3-py3.11.egg-info due to invalid metadata entry 'name'\u001b[0m\u001b[33m\n",
+      "\u001b[0mCollecting azure-cognitiveservices-speech\n",
+      "  Downloading azure_cognitiveservices_speech-1.29.0-py3-none-macosx_11_0_arm64.whl (6.3 MB)\n",
+      "\u001b[2K     \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m6.3/6.3 MB\u001b[0m \u001b[31m3.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0mm eta \u001b[36m0:00:01\u001b[0m[36m0:00:01\u001b[0m\n",
+      "\u001b[?25h\u001b[33mWARNING: Skipping /opt/homebrew/lib/python3.11/site-packages/protobuf-4.23.2-py3.11.egg-info due to invalid metadata entry 'name'\u001b[0m\u001b[33m\n",
+      "\u001b[0m\u001b[33mWARNING: Skipping /opt/homebrew/lib/python3.11/site-packages/protobuf-4.22.5-py3.11.egg-info due to invalid metadata entry 'name'\u001b[0m\u001b[33m\n",
+      "\u001b[0m\u001b[33mWARNING: Skipping /opt/homebrew/lib/python3.11/site-packages/protobuf-4.23.3-py3.11.egg-info due to invalid metadata entry 'name'\u001b[0m\u001b[33m\n",
+      "\u001b[0mInstalling collected packages: azure-cognitiveservices-speech\n",
+      "Successfully installed azure-cognitiveservices-speech-1.29.0\n",
+      "\u001b[33mWARNING: Skipping /opt/homebrew/lib/python3.11/site-packages/protobuf-4.23.2-py3.11.egg-info due to invalid metadata entry 'name'\u001b[0m\u001b[33m\n",
+      "\u001b[0m\u001b[33mWARNING: Skipping /opt/homebrew/lib/python3.11/site-packages/protobuf-4.22.5-py3.11.egg-info due to invalid metadata entry 'name'\u001b[0m\u001b[33m\n",
+      "\u001b[0m\u001b[33mWARNING: Skipping /opt/homebrew/lib/python3.11/site-packages/protobuf-4.23.3-py3.11.egg-info due to invalid metadata entry 'name'\u001b[0m\u001b[33m\n",
+      "\u001b[0m\u001b[33mWARNING: Skipping /opt/homebrew/lib/python3.11/site-packages/protobuf-4.23.2-py3.11.egg-info due to invalid metadata entry 'name'\u001b[0m\u001b[33m\n",
+      "\u001b[0m\u001b[33mWARNING: Skipping /opt/homebrew/lib/python3.11/site-packages/protobuf-4.22.5-py3.11.egg-info due to invalid metadata entry 'name'\u001b[0m\u001b[33m\n",
+      "\u001b[0m\u001b[33mWARNING: Skipping /opt/homebrew/lib/python3.11/site-packages/protobuf-4.23.3-py3.11.egg-info due to invalid metadata entry 'name'\u001b[0m\u001b[33m\n",
+      "\u001b[0m\u001b[33mWARNING: Skipping /opt/homebrew/lib/python3.11/site-packages/protobuf-4.23.2-py3.11.egg-info due to invalid metadata entry 'name'\u001b[0m\u001b[33m\n",
+      "\u001b[0m\u001b[33mWARNING: Skipping /opt/homebrew/lib/python3.11/site-packages/protobuf-4.22.5-py3.11.egg-info due to invalid metadata entry 'name'\u001b[0m\u001b[33m\n",
+      "\u001b[0m\u001b[33mWARNING: Skipping /opt/homebrew/lib/python3.11/site-packages/protobuf-4.23.3-py3.11.egg-info due to invalid metadata entry 'name'\u001b[0m\u001b[33m\n",
+      "\u001b[0m\u001b[31mERROR: Could not find a version that satisfies the requirement azure-ai-vision (from versions: none)\u001b[0m\u001b[31m\n",
+      "\u001b[0m\u001b[31mERROR: No matching distribution found for azure-ai-vision\u001b[0m\u001b[31m\n",
+      "\u001b[0m\u001b[33mWARNING: Skipping /opt/homebrew/lib/python3.11/site-packages/protobuf-4.23.2-py3.11.egg-info due to invalid metadata entry 'name'\u001b[0m\u001b[33m\n",
+      "\u001b[0m\u001b[33mWARNING: Skipping /opt/homebrew/lib/python3.11/site-packages/protobuf-4.22.5-py3.11.egg-info due to invalid metadata entry 'name'\u001b[0m\u001b[33m\n",
+      "\u001b[0m\u001b[33mWARNING: Skipping /opt/homebrew/lib/python3.11/site-packages/protobuf-4.23.3-py3.11.egg-info due to invalid metadata entry 'name'\u001b[0m\u001b[33m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "#Below content is copied from the Valentino Alto's content https://medium.com/microsoftazure/introducing-langchain-toolkits-for-azure-cognitive-services-42207ea1add7\n",
+    "#Azure Cognitive Services toolkit will extend LLMs with multimodal capabilities.\n",
+    "\n",
+    "!pip install --upgrade azure-ai-formrecognizer \n",
+    "!pip install --upgrade azure-cognitiveservices-speech \n",
+    "!pip install --upgrade azure-ai-vision "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create a COGS multi-service endpoint \n",
+    "\n",
+    "On Azure portal create a multi-service endpoint via \"Multipurpose\n",
+    "Cognitive services multi-service account\" bottom left of the page.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Below content is copied from the Valentino Alto's content https://medium.com/microsoftazure/introducing-langchain-toolkits-for-azure-cognitive-services-42207ea1add7\n",
-    "#Azure Cognitive Services toolkit will extend LLMs with multimodal capabilities.\n"
+    "import os\n",
+    "\n",
+    "os.environ[\"AZURE_COGS_KEY\"] = \"c38cd501fd1f4b03b92f91ed22cfea8e\"\n",
+    "os.environ[\"AZURE_COGS_ENDPOINT\"] = \"https://cogs-ozguler.cognitiveservices.azure.com/\"\n",
+    "os.environ[\"AZURE_COGS_REGION\"] = \"centralus\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Azure Cognitive Services Form Recognizer',\n",
+       " 'Azure Cognitive Services Speech2Text',\n",
+       " 'Azure Cognitive Services Text2Speech']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from langchain.agents.agent_toolkits import AzureCognitiveServicesToolkit\n",
+    "\n",
+    "toolkit = AzureCognitiveServicesToolkit()\n",
+    "[tool.name for tool in toolkit.get_tools()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
